# unshorten-it

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.agents/rules/: agent.md
.github/workflows/: docker-build-push.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/in/bitmaskers/unshortenit/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/in/bitmaskers/unshortenit/: DatabaseHelper.kt  MainActivity.kt
android/app/src/main/java/in/bitmaskers/unshortenit/data/api/: ApiClient.kt  Models.kt  UnshortenApiService.kt
android/app/src/main/res/drawable/: logo.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/in/bitmaskers/unshortenit/: ExampleUnitTest.kt
android/app/src/test/java/in/bitmaskers/unshortenit/util/: MainDispatcherRule.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
app/: main.py  schemas.py
app/services/: url_service.py
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/services/: cache_service.py  database_service.py  tracking_service.py  url_service.py
backend/tests/: conftest.py  test_main.py
backend/tests/services/: test_url_service.py
docs/: architecture.md
frontend/: .dockerignore  Dockerfile  env.sh  index.html  package-lock.json  package.json
frontend/public/: env-config.js
frontend/src/: App.css  App.tsx  index.css
(+20 files in other folders)
