[project]
name = "unshorten-it"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.134.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "redis>=7.2.1",
    "tenacity>=9.1.4",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]
